# radiance-field-qa

./: .gitignore  README.md  pyproject.toml
rfqa/: blender_dataparser.py  dataparser_configs.py  instant_ngp_model.py  method_configs.py  nerfacto_field.py  nerfacto_model  nerfacto_model.py  pipeline.py  template_config.py  template_pipeline.py
wandb/: config-big.yml  config-grid.yml  config-instant-ngp.yml  config.yml  create_sweep.sh  run_agent.sh  train.py  train_arg_parser.sh  train_arg_parser_big.sh  train_arg_parser_grid.sh  train_arg_parser_instant_ngp.sh
