[project]
name = "rfqa"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 1.0.0"] 

[tool.setuptools.packages.find]
include = ["rfqa*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
rfqa = 'rfqa.template_config:rfqa'
