[project]
name = "rfqa"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 1.0.0"] 

[tool.setuptools.packages.find]
include = ["rfqa*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
rfqa-nerfacto = 'rfqa.method_configs:rfqa_nerfacto'
rfqa-nerfacto-big = 'rfqa.method_configs:rfqa_nerfacto_big'
rfqa-instant-ngp = 'rfqa.method_configs:rfqa_instant_ngp'

[project.entry-points.'nerfstudio.dataparser_configs']
rfqa-blender-data = 'rfqa.dataparser_configs:rfqa_blender_dataparser'
